WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
33192
MSAA: Accessibility role of <select> elements is wrong
https://bugs.webkit.org/show_bug.cgi?id=33192
Summary
MSAA: Accessibility role of <select> elements is wrong
Jon Honeycutt
Reported
2010-01-04 19:26:23 PST
The role of non-multiple <select> elements is "client" but should be "combo box".
Attachments
patch
(4.47 KB, patch)
2010-01-04 19:29 PST
,
Jon Honeycutt
sam
: review+
jhoneycutt
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jon Honeycutt
Comment 1
2010-01-04 19:29:36 PST
Created
attachment 45858
[details]
patch
Jon Honeycutt
Comment 2
2010-01-05 10:33:30 PST
Landed in
r52781
.
Jon Honeycutt
Comment 3
2010-01-12 16:42:11 PST
<
rdar://problem/7536000
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug