MSAA: Accessibility role of <select> elements is wrong

https://bugs.webkit.org/show_bug.cgi?id=33192

Reviewed by Sam Weinig.

WebKit/win:

* AccessibleBase.cpp:
(MSAARole):
Map WebCore::PopUpButtonRole to MSAA's ROLE_SYSTEM_COMBOBOX.

LayoutTests:

* platform/win/accessibility/select-element-role-expected.txt: Added.
* platform/win/accessibility/select-element-role.html: Added.

Canonical link: https://commits.webkit.org/44194@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52781 268f45cc-cd09-0410-ab3c-d52691b4dbfc